[home] Added scrollbar to table and fixed margins

--- a/src/app/views/home-view/home-view.component.scss
+++ b/src/app/views/home-view/home-view.component.scss
@@ -9,6 +9,10 @@
 
 .cc-home-container {
     margin: 0% 10% 0% 10%;
+    
+    p-scrollPanel{
+        margin:40px 0 0 40px;
+    }
 }
 
 
